FIX: popular-rooms/card section mobile version

--- a/assets/css/style/footer.scss
+++ b/assets/css/style/footer.scss
@@ -8,7 +8,7 @@
         background-color: rgb(255, 255, 255, 0.98);
 
         > :not(:last-child) {
-            padding: 3em 1.25em;
+            padding: 2.5em 1.25em;
             padding-bottom: 0em;
         }
     }
