--- a/assets/css/style/offers/card.scss
+++ b/assets/css/style/offers/card.scss
@@ -1,6 +1,10 @@
 .offers {
     padding: 2.5em 1.25em;
 
+    &__card {
+        margin-bottom: 2em;
+    }
+
     &__informative-text {
         color: $color-grey;
         font-family: $font-archivo;
@@ -13,6 +17,7 @@
 
     &__inner {
         padding: 1em 1em;
+        padding-bottom: 2em;
     }
 
     &__title {
@@ -81,12 +86,12 @@
 
     &__content-img {
         position: relative;
-        width: fit-content;
-        height: fit-content;
+        width: 100%;
+        max-width: 21rem;
     }
 
     &__img {
-        width: 21rem;
+        width: 100%;
         height: 10.1rem;
     }
 
