--- a/assets/css/style/offers/popular-rooms.scss
+++ b/assets/css/style/offers/popular-rooms.scss
@@ -1,24 +1,28 @@
 .offers__popular-rooms {
-    padding: 0em 1.25em;
+    padding: .5em 1.25em;
+    padding-top: 3em;
+    margin-bottom: 4em;
     background-color: $bg-black;
+    text-align: center;
 
     &-informative-text {
         color: $bg-beige;
         font-family: $font-archivo;
         font-size: 0.85rem;
-        font-weight: 700;
+        font-weight: 500;
         line-height: 1rem;
         letter-spacing: 0.15rem;
-        margin-bottom: 1em;
+        margin-bottom: 2em;
     }
 
     &-title {
+        color: $color-white;
         font-family: $font-standard;
         font-size: 2.5rem;
         font-weight: 400;
         line-height: 3rem;
         letter-spacing: -0.1rem;
-        margin-bottom: 1em;
+        margin-bottom: 1.5em;
     }
 
     .offers__swiper {
